[build-system]
requires = ["setuptools >= 30.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-arhmm"
version = "0.1.0"
description = "Tree Autoregressive Hidden Markov Model for cell lineages, built on Dynamax."
requires-python = ">= 3.10"
dependencies = [
    "dynamax @ git+https://github.com/probml/dynamax.git@main",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib",
    "seaborn",
    "scipy",
    "jupyter",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["models*"]

[tool.black]
line-length = 120

[tool.ruff.lint]
ignore = ["F722"]
